# cu-project

./: .gitignore  CMakeLists.txt  README.md  build.bat  rewrite_commit_dates.sh  saved_game.txt
src/: main.cpp
src/game/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  Types.hpp
src/players/: ComputerPlayer.cpp  ComputerPlayer.hpp  HumanPlayer.cpp  HumanPlayer.hpp  Player.hpp
